--- a/pei_tracking/config/database.yml
+++ b/pei_tracking/config/database.yml
@@ -24,6 +24,10 @@ default: &default
 development:
   <<: *default
   database: pei_tracking_development
+  username: tracking
+  password: tracking1337
+  host: localhost
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +62,10 @@ development:
 test:
   <<: *default
   database: pei_tracking_test
+  username: tracking
+  password: tracking1337
+  host: localhost
+  port: 5432
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
