--- a/web_pei_tracking/Gemfile
+++ b/web_pei_tracking/Gemfile
@@ -54,5 +54,5 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'devise'
-gem 'bootstrap', '~> 4.0.0.alpha6'
+gem 'bootstrap'
 gem 'jquery-rails'
