added possibility of creating incomes and expenses

--- a/web_pei_tracking/test/fixtures/capitals.yml
+++ b/web_pei_tracking/test/fixtures/capitals.yml
@@ -1,13 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  note: MyString
+  type: 
+  note: MyText
   value: 9.99
+  implemented_at: 2017-10-21
   user: one
   category: one
 
 two:
-  note: MyString
+  type: 
+  note: MyText
   value: 9.99
+  implemented_at: 2017-10-21
   user: two
   category: two
