--- a/web_pei_tracking/Gemfile
+++ b/web_pei_tracking/Gemfile
@@ -56,3 +56,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise'
 gem 'bootstrap'
 gem 'jquery-rails'
+gem 'cancancan'
