--- a/web_pei_tracking/Gemfile
+++ b/web_pei_tracking/Gemfile
@@ -40,6 +40,7 @@ group :development, :test do
   gem 'capybara', '~> 2.13'
   gem 'rspec-rails'
   gem 'selenium-webdriver'
+  gem 'railroady'
 end
 
 group :development do
