--- a/web_pei_tracking/Gemfile
+++ b/web_pei_tracking/Gemfile
@@ -38,9 +38,10 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '~> 2.13'
+  gem 'railroady'
+  gem 'rails-erd'
   gem 'rspec-rails'
   gem 'selenium-webdriver'
-  gem 'railroady'
 end
 
 group :development do
